--- a/todolistpractice/todolistpractice/src/main/resources/application.properties
+++ b/todolistpractice/todolistpractice/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=todolistpractice
+
+server.port=8081
+
+# MySQL ?????? ??
+spring.datasource.url=jdbc:mysql://localhost:3306/todolist?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=4288
+
+# JPA ?? (JPA? ??? ??)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
