--- a/todolistpractice/todolistpractice/build.gradle
+++ b/todolistpractice/todolistpractice/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	//runtimeOnly 'com.mysql:mysql-connector-j'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 }
 
 tasks.named('test') {
